<resources>
    <string name="app_name">Mix Farm And Greenhouse</string>
    <string name="bannerImageDescription">Mix Farm and Greenhouse</string>
    <string name="company">Mix Farm and Greenhouse</string>
    <string name="url">fb.com/mixfarmandgreenhouses</string>
    <string name="address">1119 S. Trumbull Rd.\nBay City, MI 48708</string>
    <string name="phone">(989) 326&#8211;0569</string>
    <string name="description">At Mix Farms and Greenhouse, you\'ll find the perfect hanging baskets and potted container plants for your home or business.  We specialize in Wave Petunias and Geraniums, and carry an assortment of succulent plants as well.  Visit us online at our Facebook page for our current hours of operation and to see what we have growing.</string>
</resources>
