<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_image_view"
            android:contentDescription="@string/bannerImageDescription"
            android:src="@drawable/greenhouse"
            style="@style/BannerImageView" />

        <TextView
            android:id="@+id/company_text_view"
            style="@style/TitleTextView"
            android:text="@string/company" />

        <TextView
            android:id="@+id/address_text_view"
            style="@style/InfoTextView"
            android:autoLink="map"
            android:drawableLeft="@drawable/ic_place_black_24dp"
            android:drawableStart="@drawable/ic_place_black_24dp"
            android:text="@string/address" />

        <TextView
            android:id="@+id/phone_text_view"
            style="@style/InfoTextView"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawableStart="@drawable/ic_phone_black_24dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/url_text_view"
            style="@style/InfoTextView"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_public_black_24dp"
            android:drawableStart="@drawable/ic_public_black_24dp"
            android:text="@string/url" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/InfoTextView"
            android:text="@string/description" />

    </LinearLayout>
</ScrollView>


